--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,17 +1,7 @@
 <h1>New Task</h1>
 <hr>
-<%= form_for(@task) do |f| %>
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :details %>
-    <%= f.text_area :details, class: 'form-control' %>
-  </div>
-  <%= f.submit class: 'btn btn-primary w-100' %>
-<% end %>
-<hr>
+
+<%= render 'form', task: @task %>
 
 <%= link_to tasks_path do %>
   <i class="fa fa-chevron-left" aria-hidden="true"></i> Back to tasks
